NAT-1152: Add endpoint to list all offices/outreaches
This is to enable building a sitemap for the FYLCA pages
